# ENOUGH

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  MANIFEST.in  PKGBUILD  README.md  SentenceCompletion.py  SentenceCompletion.txt  SentenceCompletionStartap.bat  SentenceCompletionStartap.sh  SentenceCompletionStartup.bat  debug_package.py  exercises.yaml  how --name-only 7786c49  install.bat  install.sh  journaler.py  progress.json  publish_aur.py  publish_pypi.py  pyproject.toml  setup.py
%APPDATA%/pip/: pip.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
Core/: SentenceCompletion.py  SentenceCompletionStartup.sh  publish.py  release.yml  requirements.txt  setup.py  test_installation.py
Core/Data/: Week1_Day1_exercises.txt  requirements.txt
Core/Maintenance/: .gitignore
Core/enough/: __init__.py  __main__.py
Core/enough/cli/: __init__.py  interface.py  menu.py
Core/enough/config/: settings.py
Core/enough/templates/: enhanced_template_example.yaml
Core/enough/utils/: exceptions.py
Core/sentence_completion/: __main__.py
Core/sentence_completion/core/: review_manager.py
Core/sentence_completion/utils/: encryption.py  file_handler.py  frequency_handler.py  progress_tracker.py  submission_handler.py  template_loader.py  yaml_validator.py
Exercises/: daily.yaml  weekly.yaml
Exercises/Nathanial Branden - Sentence Completion/: weekend_reflections.yaml
Exercises/Nathaniel Branden Method/: branden_method.yaml
Maintenance/: .gitignore  SentenceCompletion.txt  archive.md
Root/: README.md  progress.yaml
Root/Core/Maintenance/: .gitignore
Root/Exercises/Custom Sentence Completion/: self_awareness.yaml
Root/Exercises/Nathanial Branden - Sentence Completion/: weekday_exercises.yaml
Submissions/Daily_Reflection_Submissions/: 2025_07_09_1.yaml
aur/: .SRCINFO  PKGBUILD
data/: Week1_Day1_exercises.txt
enough/: __init__.py  __main__.py  exercises.yaml  journaler.py
enough_journal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
journals/: 2025_08_01.yaml  2025_08_04_ID1.yaml  NathanielBranden.yaml  afternoon-reflection.yaml  morning-checkin.yaml
main/: MANIFEST.in  install.bat  install.sh  progress.yaml  pyproject.toml  setup.py
sentence_completion/: __init__.py  __main__.py
sentence_completion/cli/: interface.py
sentence_completion/core/: __init__.py  exercise_manager.py
sentence_completion/templates/: branden_method.yaml  sentence_stems.yaml
sentence_completion/utils/: __init__.py  logger.py  template_loader.py
submissions/custom/: 2024_03_21_daily_note.yaml
submissions/nathaniel_branden_method/: 2024_03_21_1.yaml
submissions/starting_strength/: 2024_03_21_1.yaml
templates/custom/: daily_note.yaml
templates/nathaniel_branden_method/: sentence_completion.yaml
templates/starting_strenght/: workouts.yaml
