[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enough-journal"
version = "0.2.0"
authors = [
    { name="Sipos Istvan", email="sipistab@gmail.com" },
]
description = "A minimal journaling application with Nathaniel Branden sentence completion exercises"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: News/Diary",
]
dependencies = [
    "PyYAML>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/sipistab/enough"
"Bug Tracker" = "https://github.com/sipistab/enough/issues"

[project.scripts]
enough-journal = "journaler:main"

[tool.setuptools]
py-modules = ["journaler"] 