[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enough-journal"
version = "0.3.1"
description = "Nathaniel Branden Sentence Completion Journal"
readme = "README.md"
license = {text = "CC0-1.0"}
authors = [
    {name = "DAX", email = "dax@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Personal Development",
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0.0",
]

[project.scripts]
enough-journal = "enough:main"

[project.urls]
Homepage = "https://github.com/sipistab/ENOUGH"
Repository = "https://github.com/sipistab/ENOUGH"

[tool.setuptools]
packages = ["enough"]
include-package-data = true

[tool.setuptools.package-data]
enough = ["exercises.yaml"] 